# obstacle_aware_damping

./: .gitignore  README.md  anylyse_data.ipynb  requirements.txt  setup.cfg  setup.py  small_tests.ipynb
data_robot/: test_hit_from_top_damping.csv  test_hit_from_top_damping_take2.csv
data_robot/new2_lukas/: single_traverse_no_interaction.csv  single_traverse_nodamping_1.csv
data_robot/new_lukas/: avoiding_box_with_damping.csv
docker_scripts/scripts/: analyse.py  docker_passive_control.py  example_lukas.py  obs_aw_pass_cont.py  working_script_lukas.py
librairies/: controller.py  docker_helper.py  draw_obs_overwrite.py  magic_numbers_and_enums.py  robot.py  robot_animation.py
librairies.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
noisy_file/: analyse.ipynb  d_min_tab_kronan.npy  d_min_tab_obs_aw.npy
passive_control/: agent.py  analysis.py  comparison_passivity_behavior.py  controller.py  docker_helper.py  draw_obs_overwrite.py  magic_numbers_and_enums.py  robot.py  robot_animation.py  robot_visualizer.py  visualization.py
passive_control/controller/: __init__.py  agent_updater.py  controller.py  (+2 more)
recordings/: test_hit_from_top_no_damping.csv  test_with_box.csv
scripts/: analytical_evaluation.py  avoid_obs_from_scratch.py  comparison_noisy_information.py  comparison_passivity_behavior.py  discrete_stability_anaylsis.py  moving_obstacle_of_huber.py  noisy_graphs.py  old_controller_comparison_passivity_behavior.py  plot_setup.py  reference_stiffness.py  robot_with_control_command.py  vizualize_steps.py
tests/: test_obstacle_controller.py  test_rk.py
(+21 files in other folders)
