[metadata]
name = passive_control
version = 0.1.0
author = Lukas Huber 
license_file = LICENSE

[options]
packages =
   passive_control 
python_requires = >=3.10

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv

